[package]
name = "virtual_gamepad"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]
schemars = ["dep:schemars"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
schemars = { version = "1.2.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.182"
nix = { version = "0.31.2", features = ["ioctl", "fs"] }

[[example]]
name = "random_buttons"

[dev-dependencies]
getrandom = "0.4.1"
